--- a/notebooks/06_hyperparameter_tuning.ipynb
+++ b/notebooks/06_hyperparameter_tuning.ipynb
@@ -2,10 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "40b5e177-eb54-4303-8920-88ba1c0eaea3",
+   "execution_count": null,
+   "id": "ef4c46f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Final Model Comparison ===\n",
+      "                 Model  Accuracy  Precision  Recall     F1    AUC\n",
+      "0  Logistic Regression     90.16      89.29   89.29  89.29  96.10\n",
+      "1        Random Forest     88.52      86.21   89.29  87.72  95.02\n",
+      "2              XGBoost     85.25      82.76   85.71  84.21  92.53\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\DATA_ANALYSIS\\ML_\\1\\Heart_Disease_Project\\.venv\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [16:26:33] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -13,17 +36,14 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from scipy.stats import randint\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9ce27f66-7beb-4c48-a3eb-54463557e160",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score,\n",
+    "    f1_score, roc_auc_score\n",
+    ")\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "\n",
     "data = pd.read_csv(r\"D:\\DATA_ANALYSIS\\ML_\\1\\Heart_Disease_Project\\data\\top10_features.csv\")\n",
     "\n",
     "X = data.drop(\"target\", axis=1)\n",
@@ -35,146 +55,101 @@
     "\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "76f11845-601e-4e39-958e-6a8c5a932ff8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline Logistic Regression Accuracy: 0.8852459016393442\n"
-     ]
-    }
-   ],
-   "source": [
+    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "log_reg = LogisticRegression(max_iter=1000, random_state=42)\n",
-    "log_reg.fit(X_train_scaled, y_train)\n",
-    "baseline_pred = log_reg.predict(X_test_scaled)\n",
-    "baseline_acc = accuracy_score(y_test, baseline_pred)\n",
-    "\n",
-    "print(\"Baseline Logistic Regression Accuracy:\", baseline_acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "81cfde14-8774-4fc1-a66b-d99d145bea03",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best Params (LogReg GridSearch): {'C': 0.01, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "Best CV Score (LogReg): 0.8305272108843538\n",
-      "Tuned Logistic Regression Accuracy: 0.9016393442622951\n"
-     ]
-    }
-   ],
-   "source": [
+    "# Logistic Regression\n",
     "param_grid = {\n",
     "    \"C\": [0.01, 0.1, 1, 10, 100],\n",
     "    \"solver\": [\"liblinear\", \"lbfgs\"],\n",
-    "    \"penalty\": [\"l2\"]  \n",
+    "    \"penalty\": [\"l2\"]\n",
+    "}\n",
+    "grid_search = GridSearchCV(\n",
+    "    LogisticRegression(max_iter=1000, random_state=42),\n",
+    "    param_grid, cv=5, scoring=\"accuracy\", n_jobs=-1\n",
+    ")\n",
+    "grid_search.fit(X_train_scaled, y_train)\n",
+    "logreg_best = grid_search.best_estimator_\n",
+    "\n",
+    "y_pred = logreg_best.predict(X_test_scaled)\n",
+    "y_proba = logreg_best.predict_proba(X_test_scaled)[:,1]\n",
+    "\n",
+    "logreg_results = {\n",
+    "    \"Model\": \"Logistic Regression\",\n",
+    "    \"Accuracy\": accuracy_score(y_test, y_pred),\n",
+    "    \"Precision\": precision_score(y_test, y_pred),\n",
+    "    \"Recall\": recall_score(y_test, y_pred),\n",
+    "    \"F1\": f1_score(y_test, y_pred),\n",
+    "    \"AUC\": roc_auc_score(y_test, y_proba)\n",
     "}\n",
     "\n",
-    "grid_search = GridSearchCV(\n",
-    "    LogisticRegression(max_iter=1000, random_state=42),param_grid, cv=5, scoring=\"accuracy\", n_jobs=-1\n",
-    ")\n",
     "\n",
-    "grid_search.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "print(\"\\nBest Params (LogReg GridSearch):\", grid_search.best_params_)\n",
-    "print(\"Best CV Score (LogReg):\", grid_search.best_score_)\n",
-    "\n",
-    "# Evaluate tuned logistic regression\n",
-    "logreg_best = grid_search.best_estimator_\n",
-    "logreg_pred = logreg_best.predict(X_test_scaled)\n",
-    "logreg_acc = accuracy_score(y_test, logreg_pred)\n",
-    "print(\"Tuned Logistic Regression Accuracy:\", logreg_acc)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "266fc854-5904-4058-bd46-f4a5a1e3eb1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best Params (RandomForest RandomSearch): {'max_depth': 2, 'min_samples_leaf': 1, 'min_samples_split': 4, 'n_estimators': 108}\n",
-      "Best CV Score (RandomForest): 0.8262755102040817\n",
-      "Tuned Random Forest Accuracy: 0.8852459016393442\n"
-     ]
-    }
-   ],
-   "source": [
+    "# Random Forest\n",
     "rf = RandomForestClassifier(random_state=42)\n",
-    "\n",
     "param_dist = {\n",
     "    \"n_estimators\": randint(50, 300),\n",
     "    \"max_depth\": randint(2, 10),\n",
     "    \"min_samples_split\": randint(2, 10),\n",
     "    \"min_samples_leaf\": randint(1, 10)\n",
     "}\n",
-    "\n",
     "random_search = RandomizedSearchCV(\n",
-    "    rf, param_distributions=param_dist, n_iter=20, cv=5, scoring=\"accuracy\", n_jobs=-1, random_state=42\n",
+    "    rf, param_distributions=param_dist, n_iter=20, cv=5,\n",
+    "    scoring=\"accuracy\", n_jobs=-1, random_state=42\n",
     ")\n",
-    "\n",
     "random_search.fit(X_train, y_train)\n",
-    "\n",
-    "print(\"\\nBest Params (RandomForest RandomSearch):\", random_search.best_params_)\n",
-    "print(\"Best CV Score (RandomForest):\", random_search.best_score_)\n",
-    "\n",
-    "# Evaluate tuned Random Forest\n",
     "rf_best = random_search.best_estimator_\n",
-    "rf_pred = rf_best.predict(X_test)\n",
-    "rf_acc = accuracy_score(y_test, rf_pred)\n",
-    "print(\"Tuned Random Forest Accuracy:\", rf_acc)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "abd93f1b-1b91-4e59-9c13-09d9b0f49861",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Model Comparison ===\n",
-      "Baseline Logistic Regression: 0.885\n",
-      "Tuned Logistic Regression:    0.902\n",
-      "Tuned Random Forest:          0.885\n"
-     ]
-    }
-   ],
-   "source": [
     "\n",
-    "print(\"\\n=== Model Comparison ===\")\n",
-    "print(f\"Baseline Logistic Regression: {baseline_acc:.3f}\")\n",
-    "print(f\"Tuned Logistic Regression:    {logreg_acc:.3f}\")\n",
-    "print(f\"Tuned Random Forest:          {rf_acc:.3f}\")\n"
+    "y_pred = rf_best.predict(X_test)\n",
+    "y_proba = rf_best.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "rf_results = {\n",
+    "    \"Model\": \"Random Forest\",\n",
+    "    \"Accuracy\": accuracy_score(y_test, y_pred),\n",
+    "    \"Precision\": precision_score(y_test, y_pred),\n",
+    "    \"Recall\": recall_score(y_test, y_pred),\n",
+    "    \"F1\": f1_score(y_test, y_pred),\n",
+    "    \"AUC\": roc_auc_score(y_test, y_proba)\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# XGBoost\n",
+    "xgb = XGBClassifier(use_label_encoder=False, eval_metric=\"logloss\", random_state=42)\n",
+    "param_dist_xgb = {\n",
+    "    \"n_estimators\": [100, 200, 300],\n",
+    "    \"learning_rate\": [0.01, 0.05, 0.1],\n",
+    "    \"max_depth\": [2, 3, 4, 5],\n",
+    "    \"subsample\": [0.8, 1],\n",
+    "    \"colsample_bytree\": [0.8, 1]\n",
+    "}\n",
+    "random_search_xgb = RandomizedSearchCV(\n",
+    "    xgb, param_distributions=param_dist_xgb, n_iter=15, cv=5,\n",
+    "    scoring=\"accuracy\", n_jobs=-1, random_state=42\n",
+    ")\n",
+    "random_search_xgb.fit(X_train, y_train)\n",
+    "xgb_best = random_search_xgb.best_estimator_\n",
+    "\n",
+    "y_pred = xgb_best.predict(X_test)\n",
+    "y_proba = xgb_best.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "xgb_results = {\n",
+    "    \"Model\": \"XGBoost\",\n",
+    "    \"Accuracy\": accuracy_score(y_test, y_pred),\n",
+    "    \"Precision\": precision_score(y_test, y_pred),\n",
+    "    \"Recall\": recall_score(y_test, y_pred),\n",
+    "    \"F1\": f1_score(y_test, y_pred),\n",
+    "    \"AUC\": roc_auc_score(y_test, y_proba)\n",
+    "}\n",
+    "\n",
+    "\n",
+    "final_results = pd.DataFrame([logreg_results, rf_results, xgb_results])\n",
+    "final_results[[\"Accuracy\",\"Precision\",\"Recall\",\"F1\",\"AUC\"]] = final_results[[\"Accuracy\",\"Precision\",\"Recall\",\"F1\",\"AUC\"]]*100\n",
+    "print(\"\\n=== Final Model Comparison ===\")\n",
+    "print(final_results.round(2))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "035fefaf-f252-47ed-ba06-cf842af13a59",
+   "id": "26387119",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -182,9 +157,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (.venv Heart)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "heart_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
